Possible fix for split gutter on wrap
Not sure why I didn't do this originally, I do worry there could be some
issue afoot but in my quick visual tests, it appears to be fine

--- a/packages/precision-diffs/src/style.css
+++ b/packages/precision-diffs/src/style.css
@@ -377,10 +377,12 @@ code {
 
 [data-type='split'][data-overflow='wrap'] [data-additions] [data-line],
 [data-type='split'][data-overflow='wrap'] [data-additions] [data-separator],
+[data-type='split'][data-overflow='wrap'] [data-additions] [data-buffer],
 [data-type='split'][data-overflow='wrap']
   [data-additions]
   [data-line-annotation] {
-  border-left: 2px solid var(--pjs-bg);
+  /* Gutter between splits when code is allowed to wrap */
+  margin-left: 2px;
 }
 
 [data-buffer] {
